force-app/main/default/objects/RT_SettingHistory__c/RT_SettingHistory__c.object-meta.xml
<CustomObject>
    <label>REV Country Setting History</label>
    <nameField>
        <displayFormat>RCSH-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>REV Country Settings History</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>