force-app/main/default/objects/RT_SettingHistory__c/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Rev Country Setting Created By ID</inlineHelpText>
    <label>Rev Country Setting Created By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rev_Country_Setting_History</relationshipName>
    <type>Lookup</type>
</CustomField>