force-app/main/default/objects/RT_SettingHistory__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <inlineHelpText>Rev Country Setting Created Date</inlineHelpText>
    <label>Rev Country Setting Created Date</label>
    <type>DateTime</type>
</CustomField>