force-app/main/default/objects/RT_SettingHistory__c/fields/IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rev Country Setting Deleted</label>
    <type>Checkbox</type>
</CustomField>