force-app/main/default/objects/RT_SettingHistory__c/fields/LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>LastActivityDate__c</fullName>
    <inlineHelpText>Rev Country Setting Last Activity Date</inlineHelpText>
    <label>Rev Country Setting Last Activity Date</label>
    <type>Date</type>
</CustomField>