force-app/main/default/objects/RT_SettingHistory__c/fields/LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Rev Country Setting Last Modified By ID</inlineHelpText>
    <label>Rev Country Setting Last Modified By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rev_Country_Setting_History1</relationshipName>
    <type>Lookup</type>
</CustomField>