force-app/main/default/objects/RT_SettingHistory__c/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <inlineHelpText>Rev Country Setting Last Modified Date</inlineHelpText>
    <label>Rev Country Setting Last Modified Date</label>
    <type>DateTime</type>
</CustomField>