force-app/main/default/objects/RT_SettingHistory__c/fields/LastReferencedDate__c.field-meta.xml
<CustomField>
    <fullName>LastReferencedDate__c</fullName>
    <inlineHelpText>Rev Country Setting Last Referenced Date</inlineHelpText>
    <label>Rev Country Setting Last Referenced Date</label>
    <type>DateTime</type>
</CustomField>