force-app/main/default/objects/RT_SettingHistory__c/fields/LastViewedDate__c.field-meta.xml
<CustomField>
    <fullName>LastViewedDate__c</fullName>
    <inlineHelpText>Rev Country Setting Last Viewed Date</inlineHelpText>
    <label>Rev Country Setting Last Viewed Date</label>
    <type>DateTime</type>
</CustomField>