force-app/main/default/objects/RT_SettingHistory__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Contains name of parent record</description>
    <label>REV Country Setting Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>