force-app/main/default/objects/RT_SettingHistory__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rev Country Setting Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rev_Country_Setting_History3</relationshipName>
    <type>Lookup</type>
</CustomField>