force-app/main/default/objects/RT_SettingHistory__c/fields/Parent_RecordId__c.field-meta.xml
<CustomField>
    <fullName>Parent_RecordId__c</fullName>
    <label>Rev Country Setting Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>