force-app/main/default/objects/RT_SettingHistory__c/fields/RE_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>RE_Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Approved</fullName>
            </value>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>