force-app/main/default/objects/RT_SettingHistory__c/fields/RE_Approver_Role_2__c.field-meta.xml
<CustomField>
    <fullName>RE_Approver_Role_2__c</fullName>
    <label>Approver Role 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>