force-app/main/default/objects/RT_SettingHistory__c/fields/RE_CND_Differential_Type__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Differential_Type__c</fullName>
    <label>Differential Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Brand Discount</fullName>
            </value>
            <value>
                <fullName>Brand Fee</fullName>
            </value>
            <value>
                <fullName>Plant Differential</fullName>
            </value>
            <value>
                <fullName>Product Differential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>