force-app/main/default/objects/RT_SettingHistory__c/fields/RE_CND_Product_Groups__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Product_Groups__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RE_CND_Product_Groups</valueSetName>
    </valueSet>
</CustomField>