force-app/main/default/objects/RT_SettingHistory__c/fields/RE_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Location_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Name</label>
    <referenceTo>RE_Location__c</referenceTo>
    <relationshipLabel>REV Country Settings History</relationshipLabel>
    <relationshipName>REV_Country_Settings_CND_CS_History</relationshipName>
    <type>Lookup</type>
</CustomField>