force-app/main/default/objects/RT_SettingHistory__c/fields/RE_Min_Margin__c.field-meta.xml
<CustomField>
    <fullName>RE_Min_Margin__c</fullName>
    <label>Min Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>