force-app/main/default/objects/RT_SettingHistory__c/fields/RE_Product__c.field-meta.xml
<CustomField>
    <fullName>RE_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>used in List price calculation Malaysia customer Opps</description>
    <label>Product</label>
    <referenceTo>RE_Product__c</referenceTo>
    <relationshipLabel>REV Country Settings History</relationshipLabel>
    <relationshipName>REV_Country_Settings_History</relationshipName>
    <type>Lookup</type>
</CustomField>