force-app/main/default/objects/RT_SettingHistory__c/fields/RE_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>RE_Product__c</referenceTo>
    <relationshipLabel>REV Country Settings History</relationshipLabel>
    <relationshipName>REV_Country_Settings_CND_History</relationshipName>
    <type>Lookup</type>
</CustomField>