force-app/main/default/objects/RT_SettingHistory__c/fields/RE_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>RE_Sales_Org__c</fullName>
    <description>used in Malaysia customer Opps to find Relevant based on sales org</description>
    <label>Sales Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>