force-app/main/default/objects/RT_SettingHistory__c/fields/RE_Value__c.field-meta.xml
<CustomField>
    <fullName>RE_Value__c</fullName>
    <label>Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>