force-app/main/default/objects/RT_SettingHistory__c/fields/RT_Site_Code__c.field-meta.xml
<CustomField>
    <fullName>RT_Site_Code__c</fullName>
    <formula>Site_Name__r.RE_Location_Code__c</formula>
    <label>Site Code</label>
    <type>Text</type>
</CustomField>