force-app/main/default/objects/RT_SettingHistory__c/fields/SystemModstamp__c.field-meta.xml
<CustomField>
    <fullName>SystemModstamp__c</fullName>
    <inlineHelpText>Rev Country Setting System Modstamp</inlineHelpText>
    <label>Rev Country Setting System Modstamp</label>
    <type>DateTime</type>
</CustomField>