force-app/main/default/objects/RT_SettingHistory__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Condition Type</fullName>
            </value>
            <value>
                <fullName>Daily Adjustment</fullName>
            </value>
            <value>
                <fullName>Distribution Channel Code</fullName>
            </value>
            <value>
                <fullName>Division Code</fullName>
            </value>
            <value>
                <fullName>MY AM code</fullName>
            </value>
            <value>
                <fullName>MY Customer Group</fullName>
            </value>
            <value>
                <fullName>MY Distribution Channel</fullName>
            </value>
            <value>
                <fullName>MY Division</fullName>
            </value>
            <value>
                <fullName>MY Payment Term</fullName>
            </value>
            <value>
                <fullName>MY Pricing Level</fullName>
            </value>
            <value>
                <fullName>MY Sales</fullName>
            </value>
            <value>
                <fullName>MY Tier</fullName>
            </value>
            <value>
                <fullName>Payment Term</fullName>
            </value>
            <value>
                <fullName>PH AM</fullName>
            </value>
            <value>
                <fullName>PH Delegated User</fullName>
            </value>
            <value>
                <fullName>Sales Group Code</fullName>
            </value>
            <value>
                <fullName>Sales Org Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>