force-app/main/default/objects/RT_SettingHistory__c/recordTypes/Canada_Pricing_Differential.recordType-meta.xml
<RecordType>
    <fullName>Canada_Pricing_Differential</fullName>
    <active>true</active>
    <description>Record type for Revolution Canada</description>
    <label>Canada Pricing Differential</label>
</RecordType>