force-app/main/default/objects/RT_SettingHistory__c/recordTypes/RE_Custom_Ops_Configuration.recordType-meta.xml
<RecordType>
    <fullName>RE_Custom_Ops_Configuration</fullName>
    <active>true</active>
    <label>RE Custom Ops Configuration</label>
</RecordType>