force-app/main/default/objects/RT_SettingHistory__c/recordTypes/RE_Intraday_Pricing.recordType-meta.xml
<RecordType>
    <fullName>RE_Intraday_Pricing</fullName>
    <active>true</active>
    <label>Intraday Pricing</label>
</RecordType>