force-app/main/default/objects/RT_SettingHistory__c/recordTypes/RT_Code_Value_mapping.recordType-meta.xml
<RecordType>
    <fullName>RT_Code_Value_mapping</fullName>
    <active>true</active>
    <description>To store code-value mapping</description>
    <label>Code - Value mapping</label>
</RecordType>