force-app/main/default/objects/RT_SettingHistory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Value__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>RE_Max_Margin__c</columns>
    <columns>RE_Min_Margin__c</columns>
    <columns>RE_Approval_Status__c</columns>
    <columns>Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>