force-app/main/default/objects/RT_SettingHistory__c/listViews/Canada_Report_Settings.listView-meta.xml
<ListView>
    <fullName>Canada_Report_Settings</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>RE_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>Canada Report Settings</label>
</ListView>