force-app/main/default/objects/RT_SettingHistory__c/listViews/MY_Approval_process.listView-meta.xml
<ListView>
    <fullName>MY_Approval_process</fullName>
    <columns>NAME</columns>
    <columns>RE_Min_Margin__c</columns>
    <columns>RE_Max_Margin__c</columns>
    <columns>RE_Approval_Status__c</columns>
    <columns>RE_Approver_Role_1__c</columns>
    <columns>RE_User_Name__c</columns>
    <columns>RE_Approver_Role_2__c</columns>
    <columns>RE_Delegate_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RT_Setting__c.RE_Approval_Process</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>MY</value>
    </filters>
    <label>MY Approval process</label>
    <sharedTo>
        <territory>Revolution_Territory.Malaysia</territory>
    </sharedTo>
</ListView>