force-app/main/default/objects/RT_SettingHistory__c/listViews/PH_Approval_process.listView-meta.xml
<ListView>
    <fullName>PH_Approval_process</fullName>
    <columns>NAME</columns>
    <columns>RE_Approver_Role_1__c</columns>
    <columns>RE_User_Name__c</columns>
    <columns>RE_Approver_Role_2__c</columns>
    <columns>RE_Delegate_Approver__c</columns>
    <columns>RE_Min_Margin__c</columns>
    <columns>RE_Max_Margin__c</columns>
    <columns>RE_Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>PH Approval process</label>
    <sharedTo>
        <territory>Revolution_Territory.Philippines</territory>
    </sharedTo>
</ListView>