force-app/main/default/objects/RT_SettingHistory__c/listViews/PH_setting.listView-meta.xml
<ListView>
    <fullName>PH_setting</fullName>
    <columns>NAME</columns>
    <columns>Value__c</columns>
    <columns>Type__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RT_Setting__c.PH_Code_Value_Mapping</value>
    </filters>
    <label>PH  setting</label>
    <sharedTo>
        <territory>Revolution_Territory.Philippines</territory>
    </sharedTo>
</ListView>