force-app/main/default/objects/RT_SettingHistory__c/listViews/RT_Account_ROC_Mapping.listView-meta.xml
<ListView>
    <fullName>RT_Account_ROC_Mapping</fullName>
    <columns>NAME</columns>
    <columns>RT_Account_Number__c</columns>
    <columns>RT_Account__c</columns>
    <columns>RT_Site_Code__c</columns>
    <columns>Site_Name__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RT_Setting__c.RT_Account_ROC_Mapping</value>
    </filters>
    <label>Turkey Customer~Site Mapping</label>
    <sharedTo>
        <territoryAndSubordinates>Revolution_Territory.Turkey</territoryAndSubordinates>
    </sharedTo>
</ListView>