force-app/main/default/objects/RT_SettingHistory__c/listViews/Turkey_Condition_Types.listView-meta.xml
<ListView>
    <fullName>Turkey_Condition_Types</fullName>
    <columns>NAME</columns>
    <columns>Value__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RT_Setting__c.RT_Code_Value_mapping</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>TU</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Condition Type</value>
    </filters>
    <label>Turkey Condition Types</label>
    <sharedTo>
        <territoryAndSubordinates>Revolution_Territory.Turkey</territoryAndSubordinates>
    </sharedTo>
</ListView>